# BeConnect3

./: CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
beacon_cli/: README.md  pyproject.toml
beacon_cli/src/beacon_cli/: __init__.py  ble_server.py  cli.py  constants.py  model.py  protocol.py  storage.py
beacon_cli/src/beacon_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ble_constants.dart  main.dart
lib/ble/: ble_advertiser.dart  ble_scanner.dart  chunk_utils.dart  gatt_client.dart  gatt_server.dart
lib/data/: alert_dao.dart  alert_database.dart  alert_packet.dart  alert_packet.g.dart
lib/demo/: demo_alerts.dart
lib/network/: alert_fetcher.dart  alert_parser.dart
lib/service/: gateway_background_service.dart
lib/services/: translation_service.dart
lib/ui/: home_screen.dart  mode_select_screen.dart  settings_screen.dart
lib/ui/gateway/: gateway_screen.dart
lib/ui/receiver/: alert_detail_screen.dart  beacon_list_item.dart  receiver_screen.dart
lib/utils/: permissions.dart
pi_sender/: README.md  pyproject.toml  streamlit_app.py
pi_sender/src/beconnect_pi/: __init__.py  ble_server.py  broadcaster.py  cli.py  constants.py  model.py  protocol.py  storage.py
pi_sender/src/beconnect_pi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pi_sender/tests/: test_metadata.py  test_model.py  test_protocol.py
test/: widget_test.dart
(+5 files in other folders)
