[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-cli"
version = "0.1.0"
description = "Cross-platform BLE beacon CLI for BeConnect (macOS + Windows)"
requires-python = ">=3.10"
dependencies = [
  "bless>=0.2.2",
]

[project.scripts]
beacon = "beacon_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
