[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beconnect-pi"
version = "0.1.0"
description = "Raspberry Pi BLE alert broadcaster compatible with BeConnect Android"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dbus-next>=0.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
beconnect-pi = "beconnect_pi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
